// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TapMap /> Should render mui tab with close button 1`] = `
<div
  className="TabMap-root-1"
>
  <button
    className="MuiButtonBase-root-15 MuiIconButton-root-25 TabMap-icon-2"
    disabled={false}
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiIconButton-label-30"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-31"
        color={undefined}
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-18"
    />
  </button>
  <button
    aria-selected={undefined}
    className="MuiButtonBase-root-15 MuiTab-root-3 MuiTab-textColorInherit-5"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="tab"
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiTab-wrapper-11"
    />
    <span
      className="MuiTouchRipple-root-18"
    />
  </button>
</div>
`;

exports[`<TapMap /> Should render normal mui tab 1`] = `
<button
  aria-selected={undefined}
  className="MuiButtonBase-root-15 MuiTab-root-3 MuiTab-textColorInherit-5"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="tab"
  tabIndex="0"
  type="button"
>
  <span
    className="MuiTab-wrapper-11"
  />
  <span
    className="MuiTouchRipple-root-18"
  />
</button>
`;
